# master-software

./: .gitmodules  CMakeLists.txt  README.md  build_all.sh  check_out_tags.sh  checkout_version.sh  masterSoftware.c  run_tests.sh  store_binaries.sh  tag_all_repos.sh  update_submodules.sh
.github/workflows/: ci.yml  pr_unit_test.yml
